<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.jake.sunshine.MainActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_sensors"
        android:title="@string/action_sensors"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_balance"
        android:title="@string/action_balance"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_speech_to_text"
        android:title="@string/action_speech_to_text"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_text_to_speech"
        android:title="@string/text_to_speech"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
